[test/build] Don't test Freetype font stuff without Fontconfig.
Most Freetype hitting tests require Fontconfig to find
them some fonts.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -13,7 +13,9 @@ test_sources += $(pthread_test_sources)
 endif
 
 if CAIRO_HAS_FT_FONT
+if CAIRO_HAS_FC_FONT
 test_sources += $(ft_font_test_sources)
+endif
 endif
 
 # Need to add quartz-surface-source
