[test] Add group-unaligned
Test case for:
   Bug 22441 -- Unexpected shift with push_group and pop_group
   https://bugs.freedesktop.org/show_bug.cgi?id=22441

This is a test that demonstrates the error in the pdf backend when using
groups on surfaces with non-integer sizes. In order to create such a
surface, we need to update the boilerplate to use doubles instead of
integers when specifying the surface size.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -502,6 +502,13 @@ REFERENCE_IMAGES = \
 	gradient-zero-stops.rgb24.ref.png \
 	group-clip.ref.png \
 	group-paint.ref.png \
+	group-unaligned.ref.png \
+	group-unaligned.pdf.ref.png \
+	group-unaligned.ps.ref.png \
+	group-unaligned.svg.argb32.ref.png \
+	group-unaligned.svg.rgb24.ref.png \
+	group-unaligned.xlib.ref.png \
+	group-unaligned.xlib-fallback.ref.png \
 	huge-linear.ps3.ref.png \
 	huge-linear.ref.png \
 	huge-radial.ps3.ref.png \
