[test] Test extremely small dash lengths.
The stroker code is liable to wedge when passed
dash patterns which don't advance the dash offset
due to limited precision arithmetic.  This test
attempts to hit all the places in the stroker where
that can happen.

Reported on the cairo mailing list by Hans Breuer:

http://lists.cairographics.org/archives/cairo/2009-June/017506.html

--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -38,6 +38,7 @@ test_sources = \
 	curve-to-as-line-to.c				\
 	dash-caps-joins.c				\
 	dash-curve.c					\
+	dash-infinite-loop.c				\
 	dash-no-dash.c					\
 	dash-offset-negative.c				\
 	dash-scale.c					\
