--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -55,6 +55,8 @@ test_sources = \
 	extend-reflect-similar.c			\
 	extend-repeat.c					\
 	extend-repeat-similar.c				\
+	extended-blend.c				\
+	extended-blend-alpha.c				\
 	fill-alpha.c					\
 	fill-alpha-pattern.c				\
 	fill-and-stroke.c				\
