--- a/perf/.gitignore
+++ b/perf/.gitignore
@@ -5,6 +5,7 @@ cairo-perf-trace
 cairo-perf-compare-backends
 cairo-perf-diff-files
 cairo-perf-graph-files
+cairo-traces
 valgrind-log
 callgrind.out.*
 index.html
