[test] Add a simplified CLEAR test.
Just performs a very basic masked clear. This does not exhibit the bug I was
looking for, but is still useful for its simplicity.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -154,6 +154,10 @@ REFERENCE_IMAGES = \
 	caps-sub-paths.ref.png \
 	caps.ps.ref.png \
 	caps.ref.png \
+	clear.argb32.ref.png \
+	clear.rgb24.ref.png \
+	clear.svg12.argb32.xfail.png \
+	clear.svg12.rgb24.xfail.png \
 	clip-all.ref.png \
 	clip-empty.ref.png \
 	clip-fill-rule-pixel-aligned.ref.png \
