--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -12,6 +12,7 @@ test_sources = \
 	caps-joins-alpha.c				\
 	caps-joins-curve.c				\
 	caps-sub-paths.c				\
+	clear.c						\
 	clip-all.c					\
 	clip-empty.c					\
 	clip-fill-rule.c				\
