[perf] Add a simple report printer.
After a run, it can be useful to reprint the results, so add
cairo-perf-print to perform that task.

For the future, I'd like to move the performance suite over to the
git/perf style of single, multi-function binary.

The sequence of operations that I typically do are:

./cairo-perf-trace -r -v -i 6 > `git describe`.`hostname`.perf
./cairo-perf-diff-files REVA REVB
./cairo-perf-print REVA
./cairo-perf-compare-backends REVA

which misses the caching available with cairo-perf-diff. 'make html' is
almost what I want, but still too prescriptive. However, that does need to
be addressed for continuous performance monitoring.

Along the perf lines, those sequence of operations become:
  ./cairo-perf record -i 6
  ./cairo-perf report
  ./cairo-perf report REVA REVB
  ./cairo-perf report --backends="image,xlib,gl" REVA REVB
  ./cairo-perf report --html REVA REVB

Also we want to think about installing the cairo-perf binary. So we want
to differentiate when run inside a git checkout.

--- a/perf/Makefile.am
+++ b/perf/Makefile.am
@@ -13,14 +13,15 @@ AM_LDFLAGS = $(CAIRO_LDFLAGS)
 EXTRA_PROGRAMS += cairo-perf \
 		  cairo-perf-trace \
 		  cairo-perf-diff-files \
+		  cairo-perf-print \
 		  cairo-perf-compare-backends \
 		  cairo-perf-graph-files
 EXTRA_DIST += cairo-perf-diff COPYING
 EXTRA_LTLIBRARIES += libcairoperf.la
 
-LDADD = $(top_builddir)/boilerplate/libcairoboilerplate.la \
+LDADD = libcairoperf.la \
+	$(top_builddir)/boilerplate/libcairoboilerplate.la \
 	$(top_builddir)/src/libcairo.la \
-	libcairoperf.la \
 	$(CAIROPERF_LIBS)
 
 cairo_perf_SOURCES =		\
@@ -98,6 +99,9 @@ cairo_perf_trace_DEPENDENCIES = \
 
 cairo_perf_diff_files_SOURCES =	\
 	cairo-perf-diff-files.c
+
+cairo_perf_print_SOURCES =	\
+	cairo-perf-print.c
 
 cairo_perf_compare_backends_SOURCES =	\
 	cairo-perf-compare-backends.c
